# lucene-rust

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md
.agents/skills/architecture/: SKILL.md
.agents/skills/code-review/: SKILL.md
.agents/skills/differential-testing/: SKILL.md
.agents/skills/ffi-safety/: SKILL.md
.agents/skills/git-workflow/: SKILL.md
.agents/skills/manage-skills/: SKILL.md
.agents/skills/parity-tracking/: SKILL.md
.agents/skills/rust-performance/: SKILL.md
.agents/skills/test-coverage/: SKILL.md
.claude/agents/: quality-reviewer.md
.claude/commands/: quality-review.md
.githooks/: pre-commit
crates/lucene-analysis/: Cargo.toml
crates/lucene-analysis/src/: lib.rs
crates/lucene-analysis/tests/: analysis_fixtures.rs
crates/lucene-codecs/: Cargo.toml
crates/lucene-codecs/benches/: hot_paths.rs
crates/lucene-codecs/examples/: write_compound_format_fixture.rs  write_doc_values_fixture.rs  write_field_infos_fixture.rs  write_fst_fixture.rs  write_live_docs_fixture.rs  write_norms_fixture.rs  write_points_fixture.rs  write_sparse_numeric_doc_values_fixture.rs  write_stored_fields_fixture.rs  write_term_vectors_fixture.rs
crates/lucene-codecs/src/: block_packed.rs  blocktree.rs  compound_format.rs  deflate.rs  direct_monotonic.rs  direct_reader.rs  doc_values.rs  doc_values_updates.rs  field_infos.rs  for_util.rs  fst.rs  fuzzy.rs  indexed_disi.rs  lib.rs  live_docs.rs  lz4.rs  norms.rs  numeric_doc_values.rs  packed_ints.rs  points.rs  postings.rs  postings_writer.rs  regexp.rs  stored_fields.rs  suggest.rs  term_vectors.rs  terms_dict.rs  vectors.rs  wildcard.rs
crates/lucene-codecs/tests/: blocktree_compressed_fixture.rs  blocktree_deep_nesting_fixture.rs  blocktree_fixtures.rs  blocktree_multilevel_fixture.rs  compound_format_fixtures.rs  doc_values_fixtures.rs  doc_values_skip_index_fixtures.rs  doc_values_varying_bpv_fixtures.rs  field_infos_fixtures.rs  fst_binary_search_fixtures.rs  fst_borrowed_seek_fixtures.rs  fst_continuous_fixtures.rs  fst_deep_trie_fixtures.rs  fst_direct_addressing_fixtures.rs  fst_fixtures.rs  fst_seek_fixtures.rs  fst_wide_input_types_fixtures.rs  live_docs_fixtures.rs  multi_valued_doc_values_fixtures.rs  norms_fixtures.rs  numeric_doc_values_fixtures.rs  points_fixtures.rs  sorted_doc_values_fixtures.rs  stored_fields_best_compression_fixtures.rs  stored_fields_fixtures.rs  term_vectors_fixtures.rs
crates/lucene-core/: Cargo.toml
crates/lucene-core/src/: lib.rs
crates/lucene-ffi/: Cargo.toml
crates/lucene-ffi/src/: directory.rs  directory_reader.rs  error.rs  explain.rs  facets.rs  handle.rs  highlighter.rs  lib.rs  points_query.rs  query.rs  range_sort.rs  raw.rs  registry.rs  results.rs  results_explain.rs  results_facets.rs  results_fragments.rs  results_scored.rs  results_sorted.rs  segment.rs  sort.rs  writer.rs
crates/lucene-index/: Cargo.toml
crates/lucene-index/examples/: verify_segment_checksums.rs  write_multi_segment_commit_fixture.rs  write_segment_info_fixture.rs  write_segment_infos_fixture.rs
crates/lucene-index/src/: check_index.rs  checksum_verify.rs  deletes.rs  index_writer.rs  indexing_chain.rs  lib.rs  merge.rs  merge_policy.rs  points_delete.rs  segment_info.rs  segment_infos.rs  segment_writer.rs  term_delete.rs  update_document.rs
crates/lucene-index/tests/: directory_fixtures.rs  merge_policy_to_merge_integration.rs  segment_info_fixtures.rs  segment_infos_fixtures.rs
crates/lucene-search/: Cargo.toml
crates/lucene-search/src/: collector.rs  directory_reader.rs  doc_value_query.rs  docid_set.rs  explain.rs  facets.rs  field_norms.rs  highlighter.rs  lib.rs  multi_segment.rs  points_query.rs  query.rs  query_cache.rs  query_parser.rs  similarity.rs  soft_deletes.rs  term_vectors_query.rs
crates/lucene-search/tests/: boolean_query_fixtures.rs  dismax_query_fixtures.rs  fuzzy_query_fixtures.rs  index_writer_custom_freq_postings_fixtures.rs  index_writer_postings_fixtures.rs  index_writer_term_vectors_fixtures.rs  match_all_no_docs_fixtures.rs  multi_segment_fixtures.rs  phrase_query_fixtures.rs  postings_writer_round_trip.rs  prefix_query_fixtures.rs  query_parser_fixtures.rs  regexp_query_fixtures.rs  scoring_fixtures.rs  span_query_fixtures.rs  term_in_set_query_fixtures.rs  term_query_fixtures.rs  wildcard_query_fixtures.rs
crates/lucene-store/: Cargo.toml
crates/lucene-store/benches/: varint_decode.rs
crates/lucene-store/src/: codec_util.rs  data_input.rs  data_output.rs  directory.rs  error.rs  index_output.rs  lib.rs
crates/lucene-store/tests/: codec_util_fixtures.rs  java_fixtures.rs
crates/lucene-util/: Cargo.toml
crates/lucene-util/benches/: util_ops.rs
crates/lucene-util/src/: base36.rs  fixed_bit_set.rs  lib.rs  small_float.rs  term_interner.rs  zigzag.rs
docs/: parity.md
fixtures/: README.md
fixtures/data/: _0.manifest.properties  _0.si  _1.manifest.properties  _1.si  group_vint.expected  manifest.properties  vint.expected  vlong.expected  zigzag_pairs.expected  zlong.expected
fixtures/src/: AppendDismaxManifest.java  AppendFuzzyManifest.java  AppendPrefixManifest.java  AppendRegexpManifest.java  AppendWildcardManifest.java  CompressedDimSpy.java  GenAnalysis.java  GenBlockTree.java  GenBlockTreeChildStrategies.java  GenBlockTreeCompressed.java  GenBlockTreeDeepNesting.java  GenBlockTreeMultilevel.java  GenCodecUtil.java  GenCompoundFormat.java  GenDocValues.java  GenDocValuesSkipIndex.java  GenDocValuesVaryingBpv.java  GenFieldInfos.java  GenFst.java  GenFstBinarySearch.java  GenFstContinuous.java  GenFstDeepTrie.java  GenFstDirectAddressing.java  GenFstSeekBacktrackFloorArc.java  GenFstSeekNonRootArrayNode.java  GenFstWideInputTypes.java  GenLiveDocs.java  GenMultiValuedDocValues.java  GenNorms.java  GenNumericDocValues.java  GenPoints.java  GenPrimitives.java  GenSegmentInfo.java  GenSegmentInfos.java  GenSortedDocValues.java  GenStoredFields.java  GenStoredFieldsBestCompression.java  GenTermVectors.java  VerifyCompoundFormat.java  VerifyDocValues.java  (+10 more)
opensearch-plugin/: README.md
scripts/: setup-hooks.sh
(+348 files in other folders)
