[package]
name = "lucene-codecs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
lucene-util = { path = "../lucene-util" }
lucene-store = { path = "../lucene-store" }
lz4_flex.workspace = true
zstd.workspace = true

[dev-dependencies]
crc32fast.workspace = true
