[package]
name = "lucene-codecs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
lucene-util = { path = "../lucene-util" }
lucene-store = { path = "../lucene-store" }
lz4_flex.workspace = true
zstd.workspace = true
miniz_oxide.workspace = true

[dev-dependencies]
crc32fast.workspace = true
criterion.workspace = true

[[bench]]
name = "hot_paths"
harness = false
