[package]
name = "lucene-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
lucene-util = { path = "../lucene-util" }
lucene-store = { path = "../lucene-store" }
lucene-codecs = { path = "../lucene-codecs" }
lucene-index = { path = "../lucene-index" }
lucene-analysis = { path = "../lucene-analysis" }
lucene-search = { path = "../lucene-search" }
