[package]
name = "lucene-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
lucene-core = { path = "../lucene-core" }
lucene-store = { path = "../lucene-store" }
lucene-codecs = { path = "../lucene-codecs" }
lucene-index = { path = "../lucene-index" }
lucene-search = { path = "../lucene-search" }
lucene-util = { path = "../lucene-util" }
jni.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
