[package]
name = "lucene-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
lucene-util = { path = "../lucene-util" }
lucene-store = { path = "../lucene-store" }
lucene-codecs = { path = "../lucene-codecs" }
rayon.workspace = true
