[package]
name = "lucene-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
lucene-util = { path = "../lucene-util" }
lucene-store = { path = "../lucene-store" }
lucene-codecs = { path = "../lucene-codecs" }
lucene-analysis = { path = "../lucene-analysis" }
rayon.workspace = true

[dev-dependencies]
crc32fast.workspace = true
