[package]
name = "lucene-search"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
lucene-util = { path = "../lucene-util" }
lucene-store = { path = "../lucene-store" }
lucene-codecs = { path = "../lucene-codecs" }
lucene-index = { path = "../lucene-index" }
rayon.workspace = true
